environment/kubernetes/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: manmaru
  labels:
    name: manmaru
