environment/kubernetes/development_blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: manmaru
  name: manmaru
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manmaruyoyaku
  template:
    metadata:
      labels:
        app: manmaruyoyaku
        version: blue
    spec:
      containers:
        - name: manmaru-blue
          image: utiuti12345/manmaruyoyaku:0.1.0
          imagePullPolicy: Always
          ports:
            - name:          http
              protocol:      TCP
              containerPort: 5000
