environment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: manmaru
  name: manmaru-svc
spec:
  type: ClusterIP
  #type: LoadBalancer
  #type: NodePort
  selector:
    app: manmaruyoyaku
  ports:
    - protocol: TCP
      port:       5000
